<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.LoginActivity">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editEmail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="30dp"
        android:background="@color/editTextColor"
        android:hint="@string/email"
        android:textAlignment="center"
        android:textColorHint="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/editPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editPassword"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="30dp"
        android:background="@color/editTextColor"
        android:hint="@string/password"
        android:textAlignment="center"
        android:textColorHint="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEmail" />

    <Button
        android:id="@+id/buttonLogIn"
        android:layout_width="130dp"
        android:layout_height="0dp"
        android:layout_marginBottom="68dp"
        android:background="@color/buttonColor"
        android:text="@string/log_in"
        android:textStyle="bold"
        android:textColor="@color/textButtonColor"
        app:layout_constraintBottom_toTopOf="@+id/textNoAccountApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPassword" />

    <TextView
        android:id="@+id/textNoAccountApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="7dp"
        android:text="@string/no_account_app"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textRegisterHere"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogIn" />

    <TextView
        android:id="@+id/textRegisterHere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="82dp"
        android:text="@string/register_here"
        android:textColor="#fff"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textNoAccountApp"
        app:layout_constraintStart_toStartOf="@+id/textNoAccountApp"
        app:layout_constraintTop_toBottomOf="@+id/textNoAccountApp" />

</androidx.constraintlayout.widget.ConstraintLayout>